Change new Long() to Long.valueOf()